--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         align-items:center
     ">
         <div>
-            <a href="https://blog.bessas.me/" class="mr-3 font:extralight">
+            <a href="/" class="mr-3 font:extralight">
               
               That&#39;s weird...
               
